# supercapacitor

./: .gitignore  README.md  supercapacitor.cabal
app/: supercap.hs
src/: Config.hs  Playlist.hs  PlaylistList.hs  Track.hs  Web.hs
static/: supercap.css
