name:           supercapacitor
version:        0.1.0.0
category:       Web
homepage:       https://github.com/nathaningle/supercapacitor#readme
author:         Nathan Ingle
maintainer:     elgni.nahtan@gmail.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

library
  exposed-modules:
      Config
    , Playlist
    , Track
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Werror -O2
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , typed-process
    , uri-encode
    , xml
  default-language: Haskell2010
